======================
 MDAnalysis CHANGELOG
======================

The rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every subversion log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
??/??/10 orbeckst, denniej0, tyler.je.reddy, danny.parton
        * major release 0.7.0
          (includes changes that can BREAK BACKWARDS COMPATIBILITY)
        * Removed ALL DEPRECATED code:
	  - AtomGroup.principleAxes (Issue 33)
	  - DCD.DCDReader.dcd_header() and DCD.DCDWriter.dcd_header()
	    (use _dcd_header())
          - Universe.dcd (and Universe.xtc, Universe.trr...) --- from
  	    now on only Universe.trajectory is supported. 
	    WILL BREAK LEGACY CODE!
          - removed the following packages from top-level MDAnalysis
 	    name space:
            - AtomGroup, Selection: import them from MDAnalysis.core if
	      really needed (e.g. 'import MDAnalysis.core.AtomGroup')
	    - distances, rms_fitting: 'import MDAnalysis.analysis.distances'
              or 'import MDAnalysis.analysis.align.rms_fitting' (the
	      actual modules still live in MDAnalysis.core but they
	      might get moved in the future and bundled with
	      transformations)
            - 'from MDAnalysis import *' will only get ['Timeseries',
	      'Universe', 'asUniverse', 'Writer', 'collection']
          - removed copy flag from distance_array and self_distance_array:
            setting it to False would always give wrong results so there was
            no good reason keeping it around 
	* whitespace is no longer required around parentheses for 
	  selectAtoms strings but the old syntax with white space
	  still works (Issue 43)
	* improved trajectory writing
           - MDAnalysis.Writer() factory function that provides an
             appropriate writer for the desired file format